--- a/src/app/account/account-details/account-details.component.html
+++ b/src/app/account/account-details/account-details.component.html
@@ -1,12 +1,23 @@
 <mat-card class="account-details" appearance="outlined">
   <mat-card-header>
-    <mat-card-title>Account Id: {{ account?.accountId }}</mat-card-title>
-    <mat-card-subtitle>Account Owner: {{ account?.owner }}</mat-card-subtitle>
-    <mat-card-subtitle
-      >Account Type: {{ account?.accountType }}</mat-card-subtitle
-    >
-    <mat-card-subtitle
-      >Account Balance: {{ account?.balance }}</mat-card-subtitle
-    >
+    <mat-card-title class="header-row">
+      <mat-icon>account_circle</mat-icon>
+      <span class="account-title">Account Id: {{ account?.accountId }}</span>
+    </mat-card-title>
   </mat-card-header>
+  <mat-card-content class="accounts-group">
+    <div class="details-row">
+      <div class="detail">
+        <mat-icon>person</mat-icon> Account Owner: {{ account?.owner }}
+      </div>
+      <div class="detail">
+        <mat-icon>category</mat-icon> Account Type:
+        {{ account?.accountType | titlecase }}
+      </div>
+      <div class="detail account-balance">
+        <mat-icon>account_balance_wallet</mat-icon> Account Balance:
+        {{ account?.balance }}
+      </div>
+    </div>
+  </mat-card-content>
 </mat-card>
