--- a/src/app/account/account-details/account-details.component.scss
+++ b/src/app/account/account-details/account-details.component.scss
@@ -1,5 +1,54 @@
 .account-details {
   width: 400px;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px; // Rounded corners
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); // Subtle shadow
+  transition: transform 0.2s ease, box-shadow 0.2s ease; // Smooth transition for hover effect
+
+  &:hover {
+    transform: translateY(-5px); // Lift effect on hover
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); // Stronger shadow on hover
+  }
+
+  .header-row {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    mat-icon {
+      font-size: 1.6rem;
+    }
+    margin-bottom: 10px;
+  }
+
+  .account-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+
+  .accounts-group {
+    .details-row {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      gap: 5px;
+    }
+
+    .detail {
+      font-size: 1rem;
+      font-weight: 500;
+      color: #34495e;
+      display: flex;
+      align-items: center;
+    }
+
+    .account-balance {
+      color: #e67e22; // Highlight balance
+    }
+
+    mat-icon {
+      font-size: 1.2rem; // Icon size
+    }
+  }
 }
