--- a/src/app/account/create-account/create-account.component.scss
+++ b/src/app/account/create-account/create-account.component.scss
@@ -1,9 +1,18 @@
 .accounts {
-  height: 250px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+
+  .create-account-header {
+    margin-bottom: 20px;
+
+    mat-card-title {
+      font-weight: 600;
+      font-size: 1.7rem;
+    }
+  }
 
   .accounts-form {
     display: flex;
