--- a/src/app/account/main-account/account.component.html
+++ b/src/app/account/main-account/account.component.html
@@ -1,4 +1,29 @@
 <div class="accounts">
+  <div class="filter-group">
+    <div class="filters">
+      <mat-form-field appearance="outline">
+        <mat-label>Filter by Owner</mat-label>
+        <input matInput type="text" [(ngModel)]="owner" />
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Filter by Account Type</mat-label>
+        <mat-select [(ngModel)]="accountTypeFilter">
+          <mat-option [value]="">None</mat-option>
+          <mat-option *ngFor="let type of accountTypes" [value]="type.label">
+            {{ type.label | titlecase }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <app-custom-button
+      color="#d11919"
+      label="Reset"
+      (click)="resetFilters()"
+      class="filter-reset"
+    />
+  </div>
   <div class="action-buttons">
     <app-custom-button label="New Account" routerLink="/account/create" />
     <app-custom-button
@@ -7,5 +32,11 @@
       routerLink="/transaction"
     />
   </div>
-  <app-account-details *ngFor="let account of accounts" [account]="account" />
+
+  <mat-card class="allow-overflow">
+    <app-account-details
+      *ngFor="let account of getFilteredAccounts()"
+      [account]="account"
+    />
+  </mat-card>
 </div>
