--- a/src/app/account/main-account/account.component.scss
+++ b/src/app/account/main-account/account.component.scss
@@ -1,15 +1,43 @@
-.accounts{
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
+.accounts {
+  margin-top: 20px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
-.action-buttons{
+  .action-buttons {
     width: 320px;
     margin: 10px 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+  }
+
+  .filter-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+
+    .filters {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 0;
+    }
+
+    .filter-reset {
+      align-self: flex-end;
+    }
+  }
+
+  .allow-overflow {
+    padding: 10px;
+    margin-top: 10px;
+    min-height: 60vh;
+    min-width: 30vw;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+  }
 }
