--- a/src/app/account/main-account/account.component.html
+++ b/src/app/account/main-account/account.component.html
@@ -33,7 +33,7 @@
     />
   </div>
 
-  <mat-card class="allow-overflow">
+  <mat-card class="allow-overflow" appearance="outlined">
     <app-account-details
       *ngFor="let account of getFilteredAccounts()"
       [account]="account"
