Minor optimization, transaction page query param support and plenty of UI redesign.

--- a/src/app/account/account-details/account-details.component.html
+++ b/src/app/account/account-details/account-details.component.html
@@ -1,6 +1,10 @@
 <mat-card class="account-details" appearance="outlined">
   <mat-card-header>
-    <mat-card-title class="header-row">
+    <mat-card-title
+      class="header-row"
+      routerLink="/transaction"
+      [queryParams]="{ accountId: account?.accountId }"
+    >
       <mat-icon>account_circle</mat-icon>
       <span class="account-title">Account Id: {{ account?.accountId }}</span>
     </mat-card-title>
