--- a/src/app/shared/custom-button/custom-button.component.scss
+++ b/src/app/shared/custom-button/custom-button.component.scss
@@ -1,3 +1,18 @@
 .rounded {
   border-radius: 20px;
 }
+
+.sm {
+  height: 25px;
+  width: 25px;
+}
+
+.md {
+  font-weight: 600;
+}
+
+.lg {
+  height: 35px;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
