--- a/src/app/transaction/create-transaction/create-transaction.component.html
+++ b/src/app/transaction/create-transaction/create-transaction.component.html
@@ -1,99 +1,105 @@
 <div class="transactions">
-  <mat-card class="transaction-card">
-    <mat-card-header class="create-transaction-header">
-      <mat-card-title> Create Transaction </mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form [formGroup]="transactionForm" class="transaction-form">
-        <mat-form-field appearance="outline">
-          <mat-label>From Account</mat-label>
-          <mat-select [formControl]="fromAccountId">
-            <mat-option
-              *ngFor="let account of accounts"
-              [value]="account.accountId"
+  <div class="transactions-card-wrapper">
+    <mat-card class="transaction-card">
+      <mat-card-header class="create-transaction-header">
+        <mat-card-title> Create Transaction </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="transactionForm" class="transaction-form">
+          <mat-form-field appearance="outline">
+            <mat-label>From Account</mat-label>
+            <mat-select [formControl]="fromAccountId">
+              <mat-option
+                *ngFor="let account of accounts"
+                [value]="account.accountId"
+              >
+                {{ account.owner }} ({{ account.accountId }}) -
+                {{ account.accountType | titlecase }} [${{ account.balance }}]
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="fromAccountId.hasError('required')">
+              Please select an account.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>To Account</mat-label>
+            <mat-select [formControl]="toAccountId">
+              <mat-option
+                *ngFor="let account of accounts"
+                [value]="account.accountId"
+              >
+                {{ account.owner }} ({{ account.accountId }}) -
+                {{ account.accountType | titlecase }} [${{ account.balance }}]
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="toAccountId.hasError('required')">
+              Please select an account.
+            </mat-error>
+            <mat-error *ngIf="toAccountId.hasError('sameAccount')">
+              From and To accounts cannot be the same.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Amount</mat-label>
+            <input
+              matInput
+              type="number"
+              [formControl]="amount"
+              min="1"
+              placeholder="Enter amount"
+            />
+            <mat-error *ngIf="amount.hasError('required')">
+              Amount is required.
+            </mat-error>
+            <mat-error *ngIf="amount.hasError('min')">
+              Amount must be greater than zero.
+            </mat-error>
+            <mat-error *ngIf="amount.hasError('invalidAmount')">
+              Amount exceeds available balance.
+            </mat-error>
+            <mat-error *ngIf="amount.hasError('newBalanceExceeded')">
+              Destination's account balance will exceed 10000.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Description</mat-label>
+            <textarea
+              matInput
+              [formControl]="description"
+              placeholder="Enter transaction description"
+            ></textarea>
+            <mat-error
+              *ngIf="transactionForm.get('description')?.hasError('required')"
             >
-              {{ account.owner }} ({{ account.accountId }}) -
-              {{ account.accountType | titlecase }} [${{ account.balance }}]
-            </mat-option>
-          </mat-select>
-          <mat-error *ngIf="fromAccountId.hasError('required')">
-            Please select an account.
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-          <mat-label>To Account</mat-label>
-          <mat-select [formControl]="toAccountId">
-            <mat-option
-              *ngFor="let account of accounts"
-              [value]="account.accountId"
+              Description is required.
+            </mat-error>
+            <mat-error
+              *ngIf="transactionForm.get('description')?.hasError('maxlength')"
             >
-              {{ account.owner }} ({{ account.accountId }}) -
-              {{ account.accountType | titlecase }}
-            </mat-option>
-          </mat-select>
-          <mat-error *ngIf="toAccountId.hasError('required')">
-            Please select an account.
-          </mat-error>
-          <mat-error *ngIf="toAccountId.hasError('sameAccount')">
-            From and To accounts cannot be the same.
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-          <mat-label>Amount</mat-label>
-          <input
-            matInput
-            type="number"
-            [formControl]="amount"
-            min="1"
-            placeholder="Enter amount"
-          />
-          <mat-error *ngIf="amount.hasError('required')">
-            Amount is required.
-          </mat-error>
-          <mat-error *ngIf="amount.hasError('min')">
-            Amount must be greater than zero.
-          </mat-error>
-          <mat-error *ngIf="amount.hasError('invalidAmount')">
-            Amount exceeds available balance.
-          </mat-error>
-          <mat-error *ngIf="amount.hasError('newBalanceExceeded')">
-            Destination's account balance will exceed 10000.
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-          <mat-label>Description</mat-label>
-          <textarea
-            matInput
-            [formControl]="description"
-            placeholder="Enter transaction description"
-          ></textarea>
-          <mat-error
-            *ngIf="transactionForm.get('description')?.hasError('required')"
-          >
-            Description is required.
-          </mat-error>
-          <mat-error
-            *ngIf="transactionForm.get('description')?.hasError('maxlength')"
-          >
-            Description cannot exceed 100 characters.
-          </mat-error>
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions class="create-button">
-      <app-custom-button
-        color="#d11919"
-        label="Cancel"
-        routerLink="/transaction"
-      />
-      <app-custom-button
-        color="#32a852"
-        label="Create"
-        (click)="createTransaction()"
-      />
-    </mat-card-actions>
-  </mat-card>
+              Description cannot exceed 100 characters.
+            </mat-error>
+          </mat-form-field>
+        </form>
+      </mat-card-content>
+      <mat-card-actions class="create-button">
+        <app-custom-button
+          backgroundColor="#d11919"
+          color="#ffffff"
+          size="lg"
+          label="Cancel"
+          routerLink="/transaction"
+        />
+        <app-custom-button
+          backgroundColor="#32a852"
+          color="#ffffff"
+          size="lg"
+          label="Create"
+          (click)="createTransaction()"
+        />
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
