--- a/src/app/transaction/create-transaction/create-transaction.component.scss
+++ b/src/app/transaction/create-transaction/create-transaction.component.scss
@@ -5,28 +5,35 @@
   justify-content: center;
   align-items: center;
 
-  .create-transaction-header {
-    margin-bottom: 20px;
+  .transactions-card-wrapper {
+    border-radius: 6px;
+    border-style: solid;
+    border-width: 1px;
 
-    mat-card-title {
-      font-weight: 600;
-      font-size: 1.7rem;
-    }
-  }
+    .transaction-card {
+      .create-transaction-header {
+        margin-bottom: 20px;
 
-  .transaction-card {
-    .transaction-form {
-      display: flex;
-      flex-direction: column;
-      width: 500px;
-      //   padding: 20px;
-      gap: 10px;
-    }
+        mat-card-title {
+          font-weight: 600;
+          font-size: 1.7rem;
+        }
+      }
 
-    .create-button {
-      align-self: center;
-      display: flex;
-      gap: 10px;
+      .transaction-form {
+        display: flex;
+        flex-direction: column;
+        width: 500px;
+        //   padding: 20px;
+        gap: 10px;
+      }
+
+      .create-button {
+        align-self: center;
+        display: flex;
+        gap: 40px;
+        margin-bottom: 15px;
+      }
     }
   }
 }
