--- a/src/app/transaction/main-transaction/transaction.component.scss
+++ b/src/app/transaction/main-transaction/transaction.component.scss
@@ -6,6 +6,11 @@
   justify-content: space-between;
   align-items: center;
 
+  h1 {
+    font-weight: 600;
+    font-size: 1.7rem;
+  }
+
   .action-buttons {
     width: 320px;
     margin: 10px 0px;
@@ -40,5 +45,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px;
+
+    .no-transactions {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 100%;
+      font-size: 1.2rem;
+      font-weight: 500;
+    }
   }
 }
